name:                moplac
version:             0.0.0
synopsis:            A toy lambda calculus
description:         
    This project began as a repo for writing practice problems from Benjamin
    Pierce's textbook 'Types and Programming Languages'. Then The lambda
    calculus ate her sisters. Left with only this language in the repo, I chose
    to dispence with the pretense and recast the repo as a yet another lambda
    calculus implementation.
homepage:            https://github.com/arendsee/benjamin
license:             MIT
license-file:        LICENSE
author:              Zebulun Arendsee
maintainer:          zbwrnz@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      library
  exposed-modules:     Moplac
  build-depends:       base >=4.8 && <4.9
  ghc-options: -Wall
